// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-canceled Renders \`extra-details-canceled\` with date in previous month 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-extra-details-chip-stub
      color="#607d8b"
      icon="delete"
    />
  </span>
</div>
`;

exports[`extra-details-canceled Renders \`extra-details-canceled\` with date in previous month 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Canceled
    </strong>
    <div>
      By : cancelled-author
    </div>
    <div>
      Date : 07/08/2013 19:00:00
    </div>
    <div
      class="c-extra-details__message"
    >
        Comment : cancelled-message
    </div>
  </div>
</div>
`;

exports[`extra-details-canceled Renders \`extra-details-canceled\` with date in previous month 3`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Canceled
    </strong>
    <div>
      By : cancelled-author
    </div>
    <div>
      Date : 07/08/2013 19:00:00
    </div>
    <div
      class="c-extra-details__message"
    >
        Comment : cancelled-message
    </div>
  </div>
</div>
`;

exports[`extra-details-canceled Renders \`extra-details-canceled\` with full canceled 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-extra-details-chip-stub
      color="#607d8b"
      icon="delete"
    />
  </span>
</div>
`;

exports[`extra-details-canceled Renders \`extra-details-canceled\` with full canceled 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Canceled
    </strong>
    <div>
      By : cancelled-author
    </div>
    <div>
      Date : 6:00:00
    </div>
    <div
      class="c-extra-details__message"
    >
        Comment : cancelled-message
    </div>
  </div>
</div>
`;

exports[`extra-details-canceled Renders \`extra-details-canceled\` without message 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-extra-details-chip-stub
      color="#607d8b"
      icon="delete"
    />
  </span>
</div>
`;

exports[`extra-details-canceled Renders \`extra-details-canceled\` without message 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Canceled
    </strong>
    <div>
      By : cancelled-author
    </div>
    <div>
      Date : 6:00:00
    </div>
    <!---->
  </div>
</div>
`;
